<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="30dp">

    <TextView
        android:id="@+id/main_text_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/main_edit_1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/main_text_1"
        android:layout_marginTop="30dp"
        android:hint="@string/ip"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/main_edit_2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/main_edit_1"
        android:layout_marginTop="30dp"
        android:hint="@string/Port"
        android:inputType="number"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/main_edit_3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/main_edit_2"
        android:layout_marginTop="30dp"
        android:hint="@string/content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/main_text_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_edit_3"
        android:text="@string/demandcode"/>

    <TextView
        android:id="@+id/main_text_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_text_5"
        android:layout_marginTop="30dp"
        android:hint="@string/wait" />



    <ScrollView
        android:id="@+id/view_1"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/main_text_2"
        android:fadeScrollbars="false"
        >
        <TextView
            android:id="@+id/main_text_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />
    </ScrollView>

    <TextView
        android:id="@+id/main_text_3"
        android:layout_above="@id/main_btn_1"
        android:hint="@string/inf"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/main_btn_1"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/btn_selector"
        android:text="@string/connect"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <Button
        android:id="@+id/main_btn_2"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btn_selector"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textSize="20sp" />

</RelativeLayout>